# myUtils

./: README.md  pyproject.toml  requirements.txt  requirements.txt.  setup.py
src/analyzeData/: Analyzer.py  README.md  __init__.py  comparative.py  descriptive.py  example_usage.py  forecaster.py  timeseries.py
src/analyzeData/analysis/: comparative.py  descriptive.py  forecaster.py  timeseries.py
src/analyzeData/core/: dataset.py  indicator.py
src/analyzeData/utils/: transformer.py  validator.py
src/analyzeData/visualization/: base_chart.py  heatmap.py  line_chart.py
src/core/: Indicator.py  __init__.py  dataset.py  transformer.py  validator.py
src/core/econData/: EconCalculator.py  EconDataset.py  EconDatavalidator.py  EconStats.py
src/core/functions/: singleIndexFunctions.py
src/getData/: __init__.py
src/getData/ecos/: __init__.py
src/getData/ecos/endpoints/: getData.py  getKeyStats.py  searchStats.py  searchWord.py  setApiKey.py
src/getData/ecos/services/: KeyStatisticList.py  StatisticItemList.py  StatisticTableList.py  base.py  statisticMeta.py  (+3 more)
src/getData/fisis/: __init__.py  functions.py
src/getData/fred/: __init__.py
src/processingData/: EconCalculator.py  __init__.py  factorComputing.py
src/processingData/calculator/: DataProcessUtils.py  DataTransformer.py  FactorComputer.py  factorComputing.py
src/visualizeData/: Visualizer.py  __init__.py  bar_chart.py  base_chart.py  dashboard.py  heatmap.py  line_chart.py
src/visualizeData/charts/: bar_chart.py  base_chart.py  dashboard.py  heatmap.py  line_chart.py  scatter_chart.py
(+32 files in other folders)
